<resources>
    <string name="app_name">TuCarro</string>
    <string name="hi_new_user">¡Hola! Para seguir, ingresa tu\ne-mail o usuario</string>
    <string name="i_dont_know_my_password">No sé mi clave</string>
    <string name="create_account">Crear cuenta</string>
    <string name="next">Continuar</string>
    <string name="password">Clave</string>
    <string name="complete_info">Completa tus datos</string>
    <string name="name">Nombre</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Registrarme</string>
    <string name="recover_email">Te enviaremos un email para que puedas cambiar tu clave</string>
    <string name="verification_email">Te enviamos un email de verificación a tu correo</string>
    <string name="confirm_email">Confirma tu email para continuar</string>
    <string name="send_code">Enviar código</string>
    <string name="email_hasnt_been_sent">No se pudo enviar email de confirmación</string>
    <string name="error">Hubo un error, intenta nuevamente</string>
    <string name="empty_fields">Hay campos vacios, llena todos para continuar</string>
    <string name="invalid_email">Utiliza un e-mail válido</string>
    <string name="invalid_password">La clave debe tener; al menos 8 carácteres, una mayúscula y una minúscula</string>
    <string name="email_already_exists">E-mail ya ha sido registrado</string>
    <string name="registration_error">Hubo un error al registrarte, intenta nuevamente</string>
    <string name="user_not_found">"Lo sentimos, tu usuario no fue encontrado</string>
    <string name="wrong_password">Clave incorrecta</string>
    <string name="login_error">Hubo un error al ingresar, intenta nuevamente</string>
    <string name="email_reset_password">Hemos enviado un email para que puedas recuperar tu contraseña</string>
    <string name="user_photo">User photo</string>
    <string name="login">Ingresar a TuCarro</string>
    <string name="home">Inicio</string>
    <string name="sales">Vender</string>
    <string name="sign_out">Salir</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="phone">Teléfono</string>
    <string name="price">Precio</string>
    <string name="to_post">Publicar</string>

    <string-array name="brand">
        <item>Marca</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Ford</item>
        <item>Hyundai</item>
        <item>Honda</item>
        <item>Jeep</item>
        <item>Kia</item>
        <item>Mazda</item>
        <item>Mercedes Benz</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Porsche</item>
        <item>Peugeot</item>
        <item>Renault</item>
        <item>Seat</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>Volvo</item>
        <item>Volkswagen</item>
    </string-array>

    <string-array name="year">
        <item>Modelo</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>
</resources>
